--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.8.0",
+    "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -58,6 +59,7 @@
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.19.1",
     "react-dev-utils": "^10.0.0",
+    "react-kawaii": "^0.14.4",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
     "semver": "6.3.0",
