get it working ie11 (the browserlist, polyfills AND swapping the hot server were key)

--- a/package.json
+++ b/package.json
@@ -78,18 +78,9 @@
       "prefer-const": 2
     }
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    "last 2 versions"
+  ],
   "jest": {
     "roots": [
       "<rootDir>/src"
