use bem and add stylelint

--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
     "sass-loader": "8.0.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "stylelint-config-css-modules": "^2.2.0",
+    "stylelint-config-prettier": "^8.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-prettier": "^1.1.2",
+    "stylelint-selector-bem-pattern": "^2.1.0",
     "terser-webpack-plugin": "2.2.1",
     "ts-pnp": "1.1.5",
     "typeface-montserrat": "0.0.75",
