--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "serve:build": "node ./node_modules/serve/bin/serve.js -s build"
   },
   "dependencies": {
     "camelcase": "^5.3.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.5",
     "react-dom": "^16.12.0",
-    "resolve": "1.12.2"
+    "resolve": "1.12.2",
+    "serve": "^11.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.4",
