--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: "eu-west-2"
-          FROM_PATH: "./build/"
+          FROM_PATH: "./build"
           DEST_PATH: "s3://lmeikle-maverick/"
           OPTIONS: "--acl public-read"
