--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "serve:build": "node ./node_modules/serve/bin/serve.js -s build"
+    "serve:build": "npm run build && node ./node_modules/serve/bin/serve.js -s build",
+    "lighthouse": "lighthouse http://localhost:5000"
   },
   "dependencies": {
     "camelcase": "^5.3.1",
@@ -31,6 +32,7 @@
     "babel-plugin-named-asset-import": "^0.3.5",
     "babel-preset-react-app": "^9.1.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "cross-env": "^7.0.0",
     "css-loader": "3.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -50,6 +52,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "lighthouse": "^5.6.0",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
